# blobsync

./: Cargo.toml
src/: app.rs  main.rs
src/app/: landing_screen.rs  main_screen.rs  mod.rs  runtime.rs
src/app/landing_screen/: render.rs
src/app/main_screen/: mod.rs  polling.rs  render.rs
src/app/types/: app.rs  mod.rs
src/app/types/backend/: fetch_blobs.rs  fetch_containers.rs  mod.rs
src/backend/: credentials.rs  fetch_blob.rs  fetch_blobs.rs  fetch_containers.rs  fetch_local_blobs.rs  fetch_remote_blobs.rs  fetch_remote_containers.rs  hashing.rs  impls.rs  index.rs  mod.rs
src/backend/impls/: credentials.rs  fetch_blobs.rs  fetch_containers.rs  hashing.rs
src/shared/: account.rs  index.rs  list_containers.rs  mod.rs  print.rs  statics.rs  utils.rs
src/utils/: account.rs  mod.rs  print.rs
