[package]
name = "blobsync"
version = "0.1.0"
edition = "2024"

[dependencies]
azure_core = "1.0.0"
azure_storage_blob = "1.0.0"
eframe = "0.34.3"
egui = "0.34.3"
egui_extras = { version = "0.34.3", features = ["image"] }
futures = "0.3.32"
image = { version = "0.25.10", features = ["default-formats"] }
serde = "1.0.228"
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt"] }
